# http_server

./: Cargo.toml  README.md
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mv_auth.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
