[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.138"
lazy-regex = "3.4.1"

[dev-dependencies]
httpc-test = "0.1.10"
anyhow = "1.0.95"
